--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,13 @@
+/* GENERAL ELEMENTS */
+
+p {
+    font-size: 18px;
+}
+
 /* HOME BILLBOARD */
 
 .home-billboard {
     height: 300px;
-}
-
-.home-billboard p {
 }
 
 /* DESCRIPTION */
@@ -16,11 +19,7 @@
 .description {
     display: table-column;
     background-color: #F2F2F2;
-    padding: 50px;
-}
-
-.description p {
-    font-size: 18px;
+    padding: 60px 50px;
 }
 
 .descrip-img {
@@ -32,34 +31,27 @@
 }
 
 /* PROJECTS */
-.projects h2 {
-    text-align: center;
-}
-.projects p {
-    margin: 0;
-    text-align: center;
-}
 
 .projects .project {
-    position: relative;
+    text-align: center;
     height: 175px;
     padding: 50px 0;
 }
 
 .project .project-title {
-    transition: .5s ease;
     color: white;
     font-weight: bold;
     text-shadow: 0px 1px 2px #000000;
+    
+    transition: .5s ease;
 }
 
 .project-description {
     opacity: 0;
     position: absolute;
-    top: 3%;
-    left: 10%;
-    transform: translate(-7%, 20%);
-    -ms-transform: translate(-10%, 15%);
+    margin: -20px 0;
+    padding: 0 5%;
+    
     transition: .5s ease;
 }
 
@@ -67,7 +59,7 @@
 .project-description a {
     font-size: 16px;
     color: white;
-    text-decoration: none;
+    cursor: pointer;
 }
 
 .project:hover .project-title {
@@ -78,10 +70,12 @@
     opacity: 1;
 }
 
-.redirect:hover {
-    text-decoration: none;
-    color: white;
-    cursor: pointer;
+.link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
 .project1 {
@@ -99,7 +93,7 @@
 .project3 {
     background: linear-gradient(rgba(10, 10, 10, 0.3), rgba(10, 10, 10, 0.7)),
         url(../images/micromouse.jpg) no-repeat center;
-    background-size: 125%;
+    background-size: 175%;
 }
 
 .project4 {
@@ -113,10 +107,6 @@
 .mailing-list {
     padding: 75px 75px;
     background-color: #F2F2F2;
-}
-
-.mailing-list p {
-    font-size: 18px;
 }
 
 .mailing-list form {
@@ -163,7 +153,8 @@
 /* CONTACT US */
 
 .contact-info {
-    padding: 20px 0 50px;
+    padding-top: 40px;
+    padding-bottom: 70px;
 }
 
 /* PHOTO REEL */
